--- a/figEegAutoflow.ini
+++ b/figEegAutoflow.ini
@@ -1,10 +1,12 @@
 key	val
+checkboxTaskNoTask	0.0000
+sliderMaxBadTime	0.6000
 sliderFlatlineSD	1.0000
-popupmenuLookupType	1.0000
+popupmenuLookupType	2.0000
 checkboxKeepOther	1.0000
 sliderMinICLabelPercent	0.5000
 sliderBurstCriterion	5.0000
-sliderBurstTolerance	5.5000
+sliderChannelMinR	0.6500
 checkboxBurstDelete	0.0000
 sliderNComps	50.0000
 checkboxNotch	0.0000
