--- a/figEegAutoflow.ini
+++ b/figEegAutoflow.ini
@@ -1,12 +1,15 @@
 key	val
+sliderExcessive	1.0000
+checkboxBiosig	0.0000
+checkboxMaskEventNum	0.0000
 checkboxTaskNoTask	0.0000
-sliderMaxBadTime	0.6000
+sliderMaxBadTime	0.5000
 sliderFlatlineSD	1.0000
-popupmenuLookupType	2.0000
+popupmenuLookupType	1.0000
 checkboxKeepOther	1.0000
 sliderMinICLabelPercent	0.5000
 sliderBurstCriterion	5.0000
-sliderChannelMinR	0.6500
+sliderChannelMinR	0.8500
 checkboxBurstDelete	0.0000
 sliderNComps	50.0000
 checkboxNotch	0.0000
