--- a/figSaveModal.ini
+++ b/figSaveModal.ini
@@ -1,9 +1,9 @@
 key	val
 popupmenuPrefix	2.0000
-popupmenuItemNumber	2.0000
+popupmenuItemNumber	1.0000
 popupmenuDelimiter	1.0000
 popupmenuSession	1.0000
 popupmenuRound	1.0000
-popupmenuProject	6.0000
-editSubject	104
-popupmenuTask	6.0000
+popupmenuProject	5.0000
+editSubject	sub-19684666
+popupmenuTask	2.0000
