--- a/figEegAutoflow.ini
+++ b/figEegAutoflow.ini
@@ -1,5 +1,8 @@
 key	val
-sliderExcessive	4.0000
+checkboxFlatlineEpochs	0.0000
+sliderAARShift	22.0000
+sliderAARWinSec	40.0000
+sliderExcessive	5.0000
 checkboxBiosig	0.0000
 checkboxTaskNoTask	0.0000
 sliderMaxBadTime	0.5000
@@ -12,7 +15,7 @@ sliderChannelMinR	0.8500
 checkboxBurstDelete	0.0000
 sliderNComps	50.0000
 checkboxNotch	0.0000
-checkboxAddAFz	0.0000
+checkboxAddCpz	1.0000
 popupmenuRerefFreq	4.0000
 popupmenuReref	3.0000
 sliderHigh	45.0000
