--- a/figSaveModal.ini
+++ b/figSaveModal.ini
@@ -5,5 +5,5 @@ popupmenuDelimiter	1.0000
 popupmenuSession	1.0000
 popupmenuRound	1.0000
 popupmenuProject	5.0000
-editSubject	sub-19684666
+editSubject	C001
 popupmenuTask	2.0000
